# hw06-jakej007

./: .buildinfo  Makefile  README.html  README.md  _config.yml  book-requirements.txt  genindex.html  hw06-description.html  index.html  index.ipynb  pyproj.toml  search.html  searchindex.js  setup.cfg
.doctrees/: README.doctree  environment.pickle  hw06-description.doctree  index.doctree
_sources/: README.md  index.ipynb
ligotools/: __init__.py  pyproj.toml  setup.cfg
ligotools/src/ligotools/: utils.py
ligotools/src/ligotools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ligotools/tests/: __init__.py  test_readligo.py  test_utils.py
make_scripts/: bookgen.sh  envsetup.sh
