# Declarative configuration for setup.py

# For more details on this format, see the official docs here:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# And a useful annotated template can be found here:
# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name             = ligotools
version          = attr: ligotools.__version__
author           = Ligo Scientific Collaboration (LSC) and Jacob Jossart (UC Berkeley, STAT 159, Spring 2022)
author_email     = jpjossart@berkeley.edu
description      = A Python library to make toys
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords         = tools, ligo
license          = BSD 3-Clause License
classifiers      =
	Programming Language :: Python :: 2.7
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir = 
	= src
packages = find:
python_requires  = >= 2.7.18,
install_requires =
	numpy
	tqdm
	scipy
	matplotlib
	h5py
	pip

[options.packages.find]
exclude =
    tests
